@@ -1,3 +1,5 @@
+2007-06-17 Andreas Obergrusberger <tradiaz@yahoo.de>
+	* two critical bugs in leoslyrics source have been fixed
 2007-02-16 Andreas Obergrusberger <tradiaz@yahoo.de>
   + nj has posted a lot of patches on the bug tracker
   	* added the option to search for artist and title at the same time
